--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -603,9 +603,9 @@ background: #666;
   border-radius: 50%;
   box-shadow:
     inset 0 0 50px #fff,
-    inset 20px 0 80px ##FFF300,
+    inset 20px 0 80px #FFF300,
     inset -20px 0 80px #0AFF00,
-    inset 20px 0 300px ##FFF300,
+    inset 20px 0 300px #FFF300,
     inset -20px 0 300px #0AFF00,
     0 0 50px #fff,
     -10px 0 80px #FFF300,
