body {   color: white; 	 background: url(https://raw.githubusercontent.com/ThakaRashard/bubblegumpop/gh-pages/img/bd_type1_citycrop.jpg) no-repeat center center fixed;   font-family: Ubuntu, sans-serif;   line-height: 1.5;    -webkit-background-size: cover;   -moz-background-size: cover;   -o-background-size: cover;   background-size: cover; }

--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -14,7 +14,18 @@ $container-max-width: 1000px;
       @content;
   }
 }
+body {
+  color: white;
+	 background: url(https://raw.githubusercontent.com/ThakaRashard/bubblegumpop/gh-pages/img/bd_type1_citycrop.jpg) no-repeat center center fixed; 
+  font-family: Ubuntu, sans-serif;
+  line-height: 1.5;
+   -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
+/*
 body {
   margin: 0;
   padding: 0;
@@ -24,7 +35,7 @@ body {
   line-height: 1.5;
   font-family: 'Ubuntu', sans-serif;
 }
-
+*/
 /* General & 'Reset' Stuff */
 
 .container {
@@ -267,16 +278,7 @@ a {
 }
 
 	
-body {
-  color: white;
-	 background: url(https://raw.githubusercontent.com/ThakaRashard/bubblegumpop/gh-pages/img/bd_type1_citycrop.jpg) no-repeat center center fixed; 
-  font-family: Ubuntu, sans-serif;
-  line-height: 1.5;
-   -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+
 
 iframe {
   margin: 0px;
