--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -70,7 +70,7 @@ header {
   padding: 20px 0;
   margin: 0 0 40px 0;
 }
-
+/*
 header h1 {
   font-size: 30px;
   line-height: 1.5;
@@ -92,6 +92,46 @@ header h1 {
 header h1:before {
 
   font-size: 50px;
+}
+*/
+header h1 {
+  font-size: 3rem;
+  line-height: 1.5;
+  margin: 0 0 0 -40px;
+  font-family: 'Fredoka One', 'Anybody', -apple-system, Ubuntu, "Ariel Black", Verdana;
+  color: $conifer; //$header;
+  /* text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
+    0 0 5px rgba(181, 232, 83, 0.1),
+    0 0 10px rgba(181, 232, 83, 0.1);  */
+    color: #fff;
+    text-shadow:
+        0 0 7px #fff,
+        0 0 10px #fff,
+        0 0 21px #fff,
+        0 0 42px #0DCBFF,
+        0 0 82px #0DCBFF,
+        0 0 92px #0DCBFF,
+        0 0 102px #0DCBFF,
+        0 0 125px #0DCBFF;
+    letter-spacing: -1px;
+  -webkit-font-smoothing: antialiased;
+
+  @include media-max-width($container-max-width) {
+    margin-left: 0;
+  }
+
+  box-shadow: rgba(240, 46, 170, 0.4) 5px 5px,
+  rgba(240, 46, 170, 0.3) 10px 10px,
+  rgba(240, 46, 170, 0.2) 15px 15px,
+  rgba(240, 46, 170, 0.1) 20px 20px,
+  rgba(240, 46, 170, 0.05) 25px 25px;
+
+}
+
+
+header h1:before {
+  content: "./BUBBLEGUMPOP";
+  font-size: 4rem;
 }
 
 header h2 {
