--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -164,6 +164,7 @@ section img {
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   color: $header;
+  padding: 10px 10px 10px 15px;
   letter-spacing: -0.03em;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
                0 0 5px rgba(181, 232, 83, 0.1),
