background: rgb(172,65,66); background: linear-gradient(90deg, rgba(172,65,66,0.7399334733893557) 0%, rgba(170,117,159,0.8127626050420168) 35%, rgba(0,212,255,0.7091211484593838) 100%);

--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -338,6 +338,8 @@ iframe {
 
 p
 {
+  background: rgb(172,65,66);
+  background: linear-gradient(90deg, rgba(172,65,66,0.7399334733893557) 0%, rgba(170,117,159,0.8127626050420168) 35%, rgba(0,212,255,0.7091211484593838) 100%);
   background-image: url("https://raw.githubusercontent.com/ThakaRashard/bubblegumpop/gh-pages/img/halfscreen-black.gif");
 }
 	
