https://cloud.visura.co/827818.xx_large.jpg

--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -58,6 +58,11 @@ table {
 	border-spacing: 0;
 }
 
+/* BEGiN_ViSUALS **********************************************/
+/* BEGiN_ViSUALS **********************************************/
+/* BEGiN_ViSUALS **********************************************/
+/* BEGiN_ViSUALS **********************************************/
+/* BEGiN_ViSUALS **********************************************/
 
 @mixin media-max-width($max-width) {
   @media (max-width: $max-width) {
@@ -379,6 +384,8 @@ a {
 iframe {
   margin: 0px;
   padding: 0px;
+  margin: 0;
+
   background-image: url("https://raw.githubusercontent.com/ThakaRashard/bubblegumpop/gh-pages/img/bd_type1_car.jpg");
   border: none;
 }
