--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -1,9 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,300;1,400&family=Noto+Emoji:wght@300;500&family=Quicksand:wght@300;500;600;700&family=Red+Hat+Mono:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Anybody:wght@900&family=Fredoka+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik+Burned&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-@import "rouge-base16-dark";
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Audiowide&family=Black+Ops+One&family=Blaka+Hollow&family=Bungee+Shade&family=Comfortaa:wght@300;400;500;600;700&family=Creepster&family=Eater&family=Ewert&family=Fontdiner+Swanky&family=Freckle+Face&family=Fredoka+One&family=Hanalei&family=Luckiest+Guy&family=Monoton&family=Moo+Lah+Lah&family=Press+Start+2P&family=Ranchers&family=Rubik+Beastly&family=Rubik+Dirt&family=Rubik+Glitch&family=Rubik+Moonrocks&family=Warnes&display=swap');@import "rouge-base16-dark";
 @import "default_colors";
+/* FONT_ARRAY
+font-family: 'Alfa Slab One', cursive;
+font-family: 'Audiowide', cursive;
+font-family: 'Black Ops One', cursive;
+font-family: 'Blaka Hollow', cursive;
+font-family: 'Bungee Shade', cursive;
+font-family: 'Comfortaa', cursive;
+font-family: 'Creepster', cursive;
+font-family: 'Eater', cursive;
+font-family: 'Ewert', cursive;
+font-family: 'Fontdiner Swanky', cursive;
+font-family: 'Freckle Face', cursive;
+font-family: 'Fredoka One', cursive;
+font-family: 'Fredoka One', 'Anybody', -apple-system, Ubuntu, "Ariel Black", Verdana;
+font-family: 'Hanalei', cursive;
+font-family: 'Fontdiner Swanky','Luckiest Guy', cursive;
+font-family: 'Monoton', cursive;
+font-family: 'Moo Lah Lah', cursive;
+font-family: 'Press Start 2P', cursive;
+font-family: 'Ranchers', cursive;
+font-family: 'Rubik Beastly', cursive;
+font-family: 'Rubik Dirt', cursive;
+font-family: 'Rubik Glitch', cursive;
+font-family: 'Rubik Moonrocks', cursive;
+font-family: 'Warnes', cursive;
+*/
 
 $body-background: $cod-grey !default;
 $body-foreground: $gallery !default;
@@ -154,12 +176,12 @@ header h1 {
   font-size: 3rem;
   line-height: 1.5;
   margin: 0 0 0 -40px;
-  /* font-family: 'Fredoka One', 'Anybody', -apple-system, Ubuntu, "Ariel Black", Verdana; */
+  
   color: $conifer; //$header;
   /* text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
     0 0 5px rgba(181, 232, 83, 0.1),
     0 0 10px rgba(181, 232, 83, 0.1);  */
-    font-family: 'Rubik Iso', cursive;
+    font-family: 'Fontdiner Swanky','Luckiest Guy', cursive;
     color: #fff;
     text-shadow:
         0 0 7px #fff,
